amended namespace one more time

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         </div>
     </footer>
     <!-- for heroku - need to add namespace --> 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAddiqSupF7BhNzmafgwWImSllcV_zGv7c&libraries=places&callback=stormy-retreat-65982.initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAddiqSupF7BhNzmafgwWImSllcV_zGv7c&libraries=places&callback=heroku.com.initMap" async defer></script>
 
 
 <!--  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAddiqSupF7BhNzmafgwWImSllcV_zGv7c&libraries=places&callback=initMap" 
