put script into html file  - check if this works in heroku

--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@
     <!-- for heroku - need to add namespace --> 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAddiqSupF7BhNzmafgwWImSllcV_zGv7c&libraries=places&callback=initMap" async defer></script>
 <script>
+
+var latitude = 41.881832;
+var longitude =  -87.623177; 
 // Zoom levels
 // 1: World
 // 5: Landmass/continent
