test setting heroku config

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         </a>
         </div>
     </footer>
-    <!-- for heroku - need to add namespace --> 
+    <!--     <script src="https://maps.googleapis.com/maps/api/js?key=MapsAPI&libraries=places&callback=initMap" async defer></script> -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAddiqSupF7BhNzmafgwWImSllcV_zGv7c&libraries=places&callback=initMap" async defer></script>
 <script>
 // had to move maps in here because of call back issue in heroku
